2011-11-20  Roland Winkler  <winkler@gnu.org>
	* README: Updated.

	* lisp/bbdb.el (bbdb-message-try-all-headers)
	(bbdb-user-mail-address-re): Clarify doc string.
	(bbdb-defstruct): Do not update bbdb-mail-aliases-need-rebuilt.
	(bbdb-record-set-note): Update bbdb-mail-aliases-need-rebuilt.
	(bbdb-record-set-name): Update name in cache and hash.
	(bbdb-record-unset-name): Removed (obsolete).
	(bbdb-hash-update): New function.
	(bbdb-record-set-field): Use it.
	(bbdb-records): Initiate variable bbdb-records.
	(bbdb-parse-internal): Use bbdb-goto-first-record.
	(bbdb-goto-first-record): Move backward only if we found a first
	record.

	* lisp/bbdb-com.el (bbdb-insert-field)
	(bbdb-delete-field-or-record): Use bbdb-record-set-field.
	(bbdb-edit-field): New optional arg value.  Handle affix,
	organization, mail, aka, and note fields directly.
	(bbdb-record-edit-affix, bbdb-record-edit-organziation)
	(bbdb-record-edit-mail, bbdb-record-edit-aka)
	(bbdb-record-edit-note): Removed.

	* lisp/bbdb.el (bbdb-mail-avoid-redundancy) Renamed from
	bbdb-mail-allow-redundancy.
	* lisp/bbdb-com.el (bbdb-dwim-mail): Update it accordingly.

	* lisp/bbdb.el (bbdb-update-records-p): Change default to less
	agressive `search'.
	(bbdb-mua-auto-update-p): New variable
	* lisp/bbdb-mua.el (bbdb-mua-auto-update): Use it.
	(bbdb-update-records): Resolve arg update-p up to two times.
	* lisp/bbdb-message.el (bbdb/message-update-records-p)
	* lisp/bbdb-rmail.el (bbdb/rmail-update-records-p)
	* lisp/bbdb-gnus.el (bbdb/gnus-update-records-p)
	* lisp/bbdb-mhe.el (bbdb/mh-update-records-p)
	* lisp/bbdb-vm.el (bbdb/vm-update-records-p): Doc fix.

	* lisp/bbdb-mua.el (bbdb-annotate-record): Convert annotation into
	list if field is affix, organization, mail or aka.
	(bbdb-mua-edit-field-interactive): New function.
	(bbdb-mua-edit-field): New command.
	(bbdb-mua-edit-field-sender, bbdb-mua-edit-field-recipients): Use
	it.

	* lisp/bbdb.el (bbdb-image, bbdb-image-path, bbdb-image-suffixes):